hphp/test/zend/good/ext/exif/tests/exif013.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image013.jpg'));
?>